@@ -54,7 +54,7 @@ public class CallTheSameFeatureWithParametersHookTest {
 	private final String innerScenarioId = CommonUtils.namedId("scenario_step_");
 	private final List<String> innerStepIds = Stream.generate(() -> CommonUtils.namedId("inner_step_"))
 			.limit(4)
-			.collect(Collectors.toList());
+			.toList();
 
 	private final List<Pair<String, Collection<Pair<String, List<String>>>>> features = Stream.of(Pair.of(
 					featureId,
